--- a/.github/workflows/ci-build-image.yml
+++ b/.github/workflows/ci-build-image.yml
@@ -10,6 +10,10 @@ on:
       build-arch:
         required: true
         type: string
+      build-test:
+        required: true
+        type: boolean
+        deault: false
       skip-itests:
         required: false
         type: boolean
