--- a/.github/workflows/pr-labeled.yml
+++ b/.github/workflows/pr-labeled.yml
@@ -7,6 +7,12 @@ on:
       - labeled
       - unlabeled
       - synchronize
+  workflow_call:
+    inputs:
+      build-test:
+        required: true
+        type: boolean
+        deault: false
 
 jobs:
   check-pr-label-and-comment:
