--- a/.github/workflows/check-labels.yml
+++ b/.github/workflows/check-labels.yml
@@ -12,7 +12,7 @@ on:
       build-test:
         required: true
         type: boolean
-        deault: false
+        default: false
 
 jobs:
   check-needs-triage-not-applied:
