--- a/.github/workflows/ci-build-image.yml
+++ b/.github/workflows/ci-build-image.yml
@@ -13,7 +13,7 @@ on:
       build-test:
         required: true
         type: boolean
-        deault: false
+        default: false
       skip-itests:
         required: false
         type: boolean
