--- a/.github/workflows/push-ci.yml
+++ b/.github/workflows/push-ci.yml
@@ -15,7 +15,7 @@ on:
       build-test:
         required: true
         type: boolean
-        deault: false
+        default: false
 
 jobs:
   code-analysis:
