--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -17,7 +17,7 @@ on:
       build-test:
         required: true
         type: boolean
-        deault: false
+        default: false
 
 jobs:
   update_release_draft:
