--- a/.github/workflows/semantic-pr.yml
+++ b/.github/workflows/semantic-pr.yml
@@ -12,7 +12,7 @@ on:
       build-test:
         required: true
         type: boolean
-        deault: false
+        default: false
 
 jobs:
   main:
