--- a/.github/workflows/image-cleanup.yml
+++ b/.github/workflows/image-cleanup.yml
@@ -4,16 +4,14 @@ on:
   pull_request_target:
     types:
       - closed
-  workflow_call:
-    inputs:
-      build-test:
-        required: true
-        type: boolean
-
+  issue_comment:
+    types:
+      - created
 jobs:
   delete-images:
     name: Delete PR-scoped test images
     runs-on: ubuntu-latest
+    if: ${{ github.event.issue.pull_request && containd(github.event.comment.body, '/build-test')}}
     steps:
       - uses: r26d/ghcr-delete-image-action@v1.2.2
         with:
