--- a/.github/workflows/ci-build-image.yml
+++ b/.github/workflows/ci-build-image.yml
@@ -10,9 +10,6 @@ on:
       build-arch:
         required: true
         type: string
-      build-test:
-        required: true
-        type: boolean
       skip-itests:
         required: false
         type: boolean
@@ -25,10 +22,14 @@ on:
       GH_PKGS_READ_TOKEN:
         required: true
         description: read-only token for pulling artifacts from GitHub Packages
+  issue_comment:
+    types:
+      - created
 
 jobs:
   get-pom-properties:
     runs-on: ubuntu-latest
+    if: github.event.issue.pull_request && contains(github.event.comment.body, '/build-test')
     steps:
     - uses: actions/checkout@v2
       with:
@@ -46,6 +47,7 @@ jobs:
   build-image:
     runs-on: ubuntu-latest
     needs: [get-pom-properties]
+    if: github.event.issue.pull_request && contains(github.event.comment.body, '/build-test')
     steps:
     - name: Install qemu
       if: ${{ inputs.build-arch != 'amd64' }}
@@ -91,6 +93,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build-image]
     if: ${{ ! inputs.skip-itests }}
+    if: github.event.issue.pull_request && contains(github.event.comment.body, '/build-test')
     steps:
     - name: Install xpath
       run: |
