--- a/.github/workflows/pr-ci.yml
+++ b/.github/workflows/pr-ci.yml
@@ -17,11 +17,9 @@ on:
       - v[0-9]+
       - v[0-9]+.[0-9]+
       - cryostat-v[0-9]+.[0-9]+
-  workflow_call:
-    inputs:
-      build-test:
-        required: true
-        type: boolean
+  issue_comment:
+    types:
+      - created
 
 jobs:
   code-analysis:
@@ -31,6 +29,7 @@ jobs:
       checkout-ref: ${{ github.event.pull_request.head.ref }}
     secrets: inherit
     if: github.repository_owner == 'cryostatio' && contains(github.event.pull_request.labels.*.name, 'safe-to-test')
+    if: github.event.issue.pull_request && contains(github.event.comment.body, '/build-test')
 
   build-and-test:
     strategy:
@@ -44,6 +43,7 @@ jobs:
       skip-itests: ${{ matrix.arch != 'amd64' }}
     secrets: inherit
     if: github.repository_owner == 'cryostatio' && contains(github.event.pull_request.labels.*.name, 'safe-to-test')
+    if: github.event.issue.pull_request && contains(github.event.comment.body, '/build-test')
 
   push-to-ghcr:
     runs-on: ubuntu-latest
@@ -52,6 +52,7 @@ jobs:
         arch: [amd64, arm64]
     needs: [code-analysis, build-and-test]
     if: always() && github.repository_owner == 'cryostatio'
+    if: github.event.issue.pull_request && contains(github.event.comment.body, '/build-test')
     steps:
     - name: Fail if needs-triage label applied
       if: ${{ contains(github.event.pull_request.labels.*.name, 'needs-triage') }}
