--- a/.github/workflows/push-ci.yml
+++ b/.github/workflows/push-ci.yml
@@ -10,11 +10,9 @@ on:
       - v[0-9]+
       - v[0-9]+.[0-9]+
       - cryostat-v[0-9]+.[0-9]+
-  workflow_call:
-    inputs:
-      build-test:
-        required: true
-        type: boolean
+  issue_comment:
+    types:
+      - created
 
 jobs:
   code-analysis:
@@ -24,12 +22,14 @@ jobs:
       checkout-ref: ${{ github.event.pull_request.head.ref }}
     secrets: inherit
     if: github.repository_owner == 'cryostatio'
+    if: github.event.issue.pull_request && contains(github.event.comment.body, '/build-test')
   build-and-test-amd64:
     uses: ./.github/workflows/ci-build-image.yml
     secrets: inherit
     with:
       build-arch: amd64
     if: github.repository_owner == 'cryostatio'
+    if: github.event.issue.pull_request && contains(github.event.comment.body, '/build-test')
   build-and-test-arm64:
     uses: ./.github/workflows/ci-build-image.yml
     secrets: inherit
@@ -37,12 +37,14 @@ jobs:
       build-arch: arm64
       skip-itests: true
     if: github.repository_owner == 'cryostatio'
+    if: github.event.issue.pull_request && contains(github.event.comment.body, '/build-test')
   push-to-quay:
     runs-on: ubuntu-latest
     needs: [code-analysis, build-and-test-amd64, build-and-test-arm64]
     env:
       CRYOSTAT_IMG: quay.io/cryostat/cryostat
     if: always() && github.repository_owner == 'cryostatio'
+    if: github.event.issue.pull_request && contains(github.event.comment.body, '/build-test')
     steps:
     - uses: actions/download-artifact@v3
       with:
