--- a/.github/workflows/push-ci.yml
+++ b/.github/workflows/push-ci.yml
@@ -17,33 +17,33 @@ on:
 jobs:
   code-analysis:
     uses: ./.github/workflows/ci-code-analysis.yml
-    if: ${{ github.event.issue.pull_request && containd(github.event.comment.body, '/build-test')}}
     with:
       checkout-repo: ${{ github.event.pull_request.head.repo.full_name }}
       checkout-ref: ${{ github.event.pull_request.head.ref }}
     secrets: inherit
+    if: github.event.issue.pull_request && contains(github.event.comment.body, '/build-test')
     if: github.repository_owner == 'cryostatio'
   build-and-test-amd64:
     uses: ./.github/workflows/ci-build-image.yml
-    if: ${{ github.event.issue.pull_request && containd(github.event.comment.body, '/build-test')}}
     secrets: inherit
     with:
       build-arch: amd64
+    if: github.event.issue.pull_request && contains(github.event.comment.body, '/build-test')
     if: github.repository_owner == 'cryostatio'
   build-and-test-arm64:
     uses: ./.github/workflows/ci-build-image.yml
-    if: ${{ github.event.issue.pull_request && containd(github.event.comment.body, '/build-test')}}
     secrets: inherit
     with:
       build-arch: arm64
       skip-itests: true
+    if: github.event.issue.pull_request && contains(github.event.comment.body, '/build-test')
     if: github.repository_owner == 'cryostatio'
   push-to-quay:
     runs-on: ubuntu-latest
-    if: ${{ github.event.issue.pull_request && containd(github.event.comment.body, '/build-test')}}
     needs: [code-analysis, build-and-test-amd64, build-and-test-arm64]
     env:
       CRYOSTAT_IMG: quay.io/cryostat/cryostat
+    if: github.event.issue.pull_request && contains(github.event.comment.body, '/build-test')
     if: always() && github.repository_owner == 'cryostatio'
     steps:
     - uses: actions/download-artifact@v3
