--- a/.github/workflows/check-labels.yml
+++ b/.github/workflows/check-labels.yml
@@ -14,7 +14,7 @@ on:
 jobs:
   check-needs-triage-not-applied:
     runs-on: ubuntu-latest
-    if: ${{ github.event.issue.pull_request && containd(github.event.comment.body, '/build-test')}}
+    if: github.event.issue.pull_request && contains(github.event.comment.body, '/build-test')
     steps:
       - name: Fail if needs-triage label applied
         if: ${{ contains(github.event.pull_request.labels.*.name, 'needs-triage')}}
