--- a/.github/workflows/ci-build-image.yml
+++ b/.github/workflows/ci-build-image.yml
@@ -29,7 +29,7 @@ on:
 jobs:
   get-pom-properties:
     runs-on: ubuntu-latest
-    if: ${{ github.event.issue.pull_request && containd(github.event.comment.body, '/build-test')}}
+    if: github.event.issue.pull_request && contains(github.event.comment.body, '/build-test')
     steps:
     - uses: actions/checkout@v2
       with:
@@ -46,7 +46,7 @@ jobs:
 
   build-image:
     runs-on: ubuntu-latest
-    if: ${{ github.event.issue.pull_request && containd(github.event.comment.body, '/build-test')}}
+    if: github.event.issue.pull_request && contains(github.event.comment.body, '/build-test')
     needs: [get-pom-properties]
     steps:
     - name: Install qemu
@@ -91,9 +91,9 @@ jobs:
 
   integration-tests:
     runs-on: ubuntu-latest
-    if: ${{ github.event.issue.pull_request && containd(github.event.comment.body, '/build-test')}}
     needs: [build-image]
     if: ${{ ! inputs.skip-itests }}
+    if: github.event.issue.pull_request && contains(github.event.comment.body, '/build-test')
     steps:
     - name: Install xpath
       run: |
