--- a/.github/workflows/pr-labeled.yml
+++ b/.github/workflows/pr-labeled.yml
@@ -14,7 +14,7 @@ on:
 jobs:
   check-pr-label-and-comment:
     runs-on: ubuntu-latest
-    if: ${{ github.event.issue.pull_request && containd(github.event.comment.body, '/build-test')}}
+    if: github.event.issue.pull_request && contains(github.event.comment.body, '/build-test')
     steps:
       - uses: yashhy/pr-label-check-and-comment-action@v1.0.1
         with:
