--- a/.github/workflows/semantic-pr.yml
+++ b/.github/workflows/semantic-pr.yml
@@ -15,7 +15,7 @@ on:
 jobs:
   main:
     runs-on: ubuntu-latest
-    if: ${{ github.event.issue.pull_request && containd(github.event.comment.body, '/build-test')}}
+    if: github.event.issue.pull_request && contains(github.event.comment.body, '/build-test')
     steps:
       - uses: amannn/action-semantic-pull-request@v3.4.0
         env:
