--- a/.github/workflows/pr-ci.yml
+++ b/.github/workflows/pr-ci.yml
@@ -28,8 +28,7 @@ jobs:
       checkout-repo: ${{ github.event.pull_request.head.repo.full_name }}
       checkout-ref: ${{ github.event.pull_request.head.ref }}
     secrets: inherit
-    if: github.repository_owner == 'cryostatio' && contains(github.event.pull_request.labels.*.name, 'safe-to-test')
-    if: github.event.issue.pull_request && contains(github.event.comment.body, '/build-test')
+    if: github.repository_owner == 'cryostatio' && contains(github.event.pull_request.labels.*.name, 'safe-to-test') && github.event.issue.pull_request && contains(github.event.comment.body, '/build-test')
 
   build-and-test:
     strategy:
@@ -42,8 +41,7 @@ jobs:
       checkout-ref: ${{ github.event.pull_request.head.ref }}
       skip-itests: ${{ matrix.arch != 'amd64' }}
     secrets: inherit
-    if: github.repository_owner == 'cryostatio' && contains(github.event.pull_request.labels.*.name, 'safe-to-test')
-    if: github.event.issue.pull_request && contains(github.event.comment.body, '/build-test')
+    if: github.repository_owner == 'cryostatio' && contains(github.event.pull_request.labels.*.name, 'safe-to-test') && github.event.issue.pull_request && contains(github.event.comment.body, '/build-test')
 
   push-to-ghcr:
     runs-on: ubuntu-latest
@@ -51,8 +49,7 @@ jobs:
       matrix:
         arch: [amd64, arm64]
     needs: [code-analysis, build-and-test]
-    if: always() && github.repository_owner == 'cryostatio'
-    if: github.event.issue.pull_request && contains(github.event.comment.body, '/build-test')
+    if: always() && github.repository_owner == 'cryostatio' && github.event.issue.pull_request && contains(github.event.comment.body, '/build-test')
     steps:
     - name: Fail if needs-triage label applied
       if: ${{ contains(github.event.pull_request.labels.*.name, 'needs-triage') }}
