--- a/.github/workflows/push-ci.yml
+++ b/.github/workflows/push-ci.yml
@@ -21,30 +21,26 @@ jobs:
       checkout-repo: ${{ github.event.pull_request.head.repo.full_name }}
       checkout-ref: ${{ github.event.pull_request.head.ref }}
     secrets: inherit
-    if: github.repository_owner == 'cryostatio'
-    if: github.event.issue.pull_request && contains(github.event.comment.body, '/build-test')
+    if: github.repository_owner == 'cryostatio' && github.event.issue.pull_request && contains(github.event.comment.body, '/build-test')
   build-and-test-amd64:
     uses: ./.github/workflows/ci-build-image.yml
     secrets: inherit
     with:
       build-arch: amd64
-    if: github.repository_owner == 'cryostatio'
-    if: github.event.issue.pull_request && contains(github.event.comment.body, '/build-test')
+    if: github.repository_owner == 'cryostatio' && github.event.issue.pull_request && contains(github.event.comment.body, '/build-test')
   build-and-test-arm64:
     uses: ./.github/workflows/ci-build-image.yml
     secrets: inherit
     with:
       build-arch: arm64
       skip-itests: true
-    if: github.repository_owner == 'cryostatio'
-    if: github.event.issue.pull_request && contains(github.event.comment.body, '/build-test')
+    if: github.repository_owner == 'cryostatio' && github.event.issue.pull_request && contains(github.event.comment.body, '/build-test')
   push-to-quay:
     runs-on: ubuntu-latest
     needs: [code-analysis, build-and-test-amd64, build-and-test-arm64]
     env:
       CRYOSTAT_IMG: quay.io/cryostat/cryostat
-    if: always() && github.repository_owner == 'cryostatio'
-    if: github.event.issue.pull_request && contains(github.event.comment.body, '/build-test')
+    if: always() && github.repository_owner == 'cryostatio' && github.event.issue.pull_request && contains(github.event.comment.body, '/build-test')
     steps:
     - uses: actions/download-artifact@v3
       with:
