--- a/.github/workflows/pr-command.yml
+++ b/.github/workflows/pr-command.yml
@@ -13,12 +13,6 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ github.event.issue.pull_request && startsWith(github.event.comment.body, '/build_test') }}
     steps:
-      - name: Set latest commit status as pending
-        uses: myrotvorets/set-commit-status-action@master
-        with:
-          sha: ${{ steps.comment-branch.outputs.head_sha }}
-          token: ${{ secrets.GITHUB_TOKEN }}
-          status: pending
       - name:  Command handler for building and testing
         id: command
         uses: xt0rted/slash-command-action@v1
@@ -29,20 +23,16 @@ jobs:
           reaction-type: "+1"
           allow-edits: "false"
           permission-level: write
-      - name: Build image
+      - name: Build preview image
         id: build-image
-        uses: ./.github/workflows/ci-build-image.yml
-        secrets: inherit
-        with:
-          build-arch: amd64
-      - name: Print the image
+        run: echo "tag=quay.io/macao/demo:latest" >> $GITHUB_OUTPUT
+      - name: Print the preview image
         uses: thollander/actions-comment-pull-request@v1
         with:
           message: |-
             Preview image available:
-      - name: Set latest commit status as ${{ job.status }}
-        uses: myrotvorets/set-commit-status-action@master
-        with:
-          sha: ${{ steps.comment-branch.outputs.head_sha }}
-          token: ${{ secrets.GITHUB_TOKEN }}
-          status: ${{ job.status }}
+            ```
+            ${{ steps.build-image.outputs.tag }}
+            ```
+      - name: Run tests
+        run: echo "Running tests"
