--- a/.github/workflows/ci-build-image.yml
+++ b/.github/workflows/ci-build-image.yml
@@ -18,6 +18,10 @@ on:
       image-version:
         description: the Cryostat application version that will be built
         value: ${{ jobs.get-pom-properties.outputs.image-version }}
+    secrets:
+      GH_PKGS_READ_TOKEN:
+        required: true
+        description: read-only token for pulling artifacts from GitHub Packages
 
 jobs:
   get-pom-properties:
