--- a/.github/workflows/pr-ci.yml
+++ b/.github/workflows/pr-ci.yml
@@ -10,25 +10,33 @@ on:
 
 jobs:
   code-analysis:
-    uses: ./.github/workflows/ci-code-analysis.yml
-    with:
-      checkout-repo: ${{ github.event.pull_request.head.repo.full_name }}
-      checkout-ref: ${{ github.event.pull_request.head.ref }}
-    secrets: inherit
+    runs-on: ubuntu-latest:
     if: github.repository_owner == 'cryostatio' && contains(github.event.pull_request.labels.*.name, 'safe-to-test') && github.event.issue.pull_request && startsWith(github.event.comment.body, '/build_test')
     steps:
     - name: React to comment
-      uses: actions/github-script@v4
+    uses: actions/github-script@v4
+    with:
+      script: |
+          const {owner, repo} = context.issue
+          github.reactions.createForIssueComment({
+            owner,
+            repo,
+            comment_id: context.payload.comment.id,
+            content: "+1",
+          });  
+    - uses: tspascoal/get-user-teams-membership@v2
+      id: checkMember
       with:
-        script: |
-            const {owner, repo} = context.issue
-            github.reactions.createForIssueComment({
-              owner,
-              repo,
-              comment_id: context.payload.comment.id,
-              content: "+1",
-            });  
-
+        username: ${{ github.actor }}
+        team: 'cryostat/reviewers'
+        GITHUB_TOKEN: ${{ secrets.PAT }}
+    - uses: ./.github/workflows/ci-code-analysis.yml
+      with:
+        checkout-repo: ${{ github.event.pull_request.head.repo.full_name }}
+        checkout-ref: ${{ github.event.pull_request.head.ref }}
+      secrets: inherit
+      if: ${{ steps.checkMember.outputs.isTeamMember == 'true' }}
+      
   build-and-test:
     strategy:
       matrix:
@@ -40,7 +48,7 @@ jobs:
       checkout-ref: ${{ github.event.pull_request.head.ref }}
       skip-itests: ${{ matrix.arch != 'amd64' }}
     secrets: inherit
-    if: github.repository_owner == 'cryostatio' && contains(github.event.pull_request.labels.*.name, 'safe-to-test') && github.event.issue.pull_request && startsWith(github.event.comment.body, '/build_test')
+    if: github.repository_owner == 'cryostatio' && contains(github.event.pull_request.labels.*.name, 'safe-to-test') && github.event.issue.pull_request && startsWith(github.event.comment.body, '/build_test') && steps.checkMember.outputs.isTeamMember == 'true'
 
   push-to-ghcr:
     runs-on: ubuntu-latest
@@ -72,7 +80,6 @@ jobs:
         registry: ghcr.io/${{ github.repository_owner }}
         username: ${{ github.event.pull_request.user.login }}
         password: ${{ secrets.GHCR_PR_TOKEN }}
-      id: workflow-status
     - name: Comment test image link
       uses: thollander/actions-comment-pull-request@v1
       with:
